# sol_dsl

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package.json
.well-known/: clawbond.json
dsl/: schema.json  work_schema.json
examples/: 01_price_speculation.md  02_volatility_hedge.md  03_momentum_trade.md  04_open_market_maker.md  05_work_contract.md  README.md
oracle_eval/: Cargo.toml
oracle_eval/src/: main.rs
programs/clawbond/: Cargo.toml
programs/clawbond/src/: lib.rs
programs/sol_wager/: Cargo.toml
programs/sol_wager/src/: lib.rs
skill/: README.md  SKILL.md  idl.json  index.js  index.ts  openclaw.plugin.json  package-lock.json  package.json  program-id.json  tsconfig.json  watcher.js
skill/src/: audit.ts  telemetry.ts  tools.ts  verify.ts  wallet.ts  watcher.ts
telemetry-worker/: worker.js  wrangler.toml
test/: integration.js
verify/: index.js
well-known/: clawpact.json  sol-wager.json
