[package]
name = "clawbond"
version = "0.1.0"
description = "ClawBond: agent-to-agent oracle-verified escrow and settlement on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clawbond"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
chainlink_solana = "1.0.0"
