[package]
name = "sol_wager"
version = "0.1.0"
description = "Solana Agent-Wager: on-chain wager program using Chainlink price feeds"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_wager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
chainlink_solana = "1.0.0"
